syntax = "proto3";
package gov.hhs.aspr.gcm.translation.protobuf;

option java_multiple_files = true;
option java_package = "gov.hhs.aspr.gcm.translation.protobuf.protobuf.core.input";


message WrapperEnumValue {
    string enumTypeUrl = 1;
    string value = 2;
}